Update slider with graphql data and fixed phone number on mobile

--- a/components/Home/MainBannerV2.module.css
+++ b/components/Home/MainBannerV2.module.css
@@ -23,7 +23,7 @@
   z-index: 1;
 }
 
-.itemBg1 {
+/* .itemBg1 {
   background-image: url("/images/home-five/slider1.jpg");
 }
 .itemBg2 {
@@ -31,7 +31,7 @@
 }
 .itemBg3 {
   background-image: url("/images/home-five/slider3.jpg");
-}
+} */
 
 .itemContent {
   position: absolute;
